Add brave web browser instead of chrome
Add some var for fixed window size by medium and large in one place
Add some window for application like gpod, pavucontrol

--- a/.config/tig/config
+++ b/.config/tig/config
@@ -1,6 +1,9 @@
 # amend commit
 bind generic + !git commit --amend
 
+# delete files
+bind status X !rm -i %(file)
+
 # clean
 bind status D !git clean -i
 
