Fix mailto handler and shortcut for paste secondary pasteboard

--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -14,11 +14,12 @@ shortcut-add g=http://search.uselilo.org/searchweb.php?q=$0
 shortcut-add a=https://duckduckgo.com/html/?q=!gifl%20ansible+$0
 set strict-ssl=false
 
-handler-add mailto=gmail %s
+handler-add mailto=/home/david/share/bin/i3/gmail-mail %s
 #handler-add ftp=termite -e wget %s -P ~/downloads
 set home-page=./.config/vimb/closed
 
-nmap ,,v :source ~/.config/vimb/config
+nmap ,,v ::sh! sh -c 'xsel -o -s | xdotool type --file -'
+nmap ,,w :source ~/.config/vimb/config<CR>
 nmap ,,o :sh /bin/sh -c "xdg-open ~/downloads/\$(ls -1 -t ~/downloads/ | head -1)"<CR>
 nmap ,,D :sh /bin/sh -c "rm ~/downloads/\$(ls -1 -t ~/downloads/ | head -1)"<CR>
 #nmap ,;b ::e! bookmarkFileToHtml('file:///home/david/.config/vimb/bookmark')<CR>
